--- a/package.json
+++ b/package.json
@@ -3,54 +3,51 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "cross-env NODE_PATH=./src node ./src/server"
+    "start": "node ./src/www/server"
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
-    "async": "^3.2.0",
-    "autoprefixer": "^10.3.1",
-    "axios": "^0.21.1",
-    "babel-loader": "^8.2.2",
-    "body-parser": "^1.19.0",
-    "cheerio": "^1.0.0-rc.10",
-    "chromedriver": "^92.0.1",
+    "autoprefixer": "^10.4.16",
+    "axios": "^1.6.5",
+    "body-parser": "^1.20.2",
+    "cheerio": "^1.0.0-rc.12",
+    "chromedriver": "^120.0.1",
     "compression": "^1.7.4",
-    "cookie": "^0.4.1",
-    "cookie-parser": "~1.4.4",
+    "cookie": "^0.6.0",
+    "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
-    "crypto-js": "^4.1.1",
-    "css-loader": "^5.2.7",
-    "debug": "~2.6.9",
-    "dotenv": "^10.0.0",
-    "ejs": "^3.1.6",
-    "express": "~4.16.1",
-    "express-session": "^1.17.2",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "http": "0.0.1-security",
-    "http-errors": "~1.6.3",
-    "moment": "^2.29.1",
-    "morgan": "~1.9.1",
-    "multer": "^1.4.2",
+    "crypto-js": "^4.2.0",
+    "css-loader": "^6.9.0",
+    "debug": "^4.3.4",
+    "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "http": "^0.0.1-security",
+    "http-errors": "^2.0.0",
+    "loader": "^2.1.1",
+    "moment": "^2.30.1",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "node-cron": "^3.0.0",
-    "node-sass": "^6.0.1",
-    "nodemon": "^2.0.12",
-    "passport": "^0.4.1",
+    "node-cron": "^3.0.3",
+    "node-sass": "^9.0.0",
+    "nodemon": "^3.0.2",
+    "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^2.0.0",
     "passport-google-oauth20": "^2.0.0",
-    "passport-jwt": "^4.0.0",
+    "passport-jwt": "^4.0.1",
     "passport-kakao": "^1.0.1",
     "passport-local": "^1.0.0",
-    "pm2": "^5.1.1",
-    "postcss-loader": "^6.1.1",
-    "pug": "2.0.0-beta11",
+    "path": "^0.12.7",
+    "pm2": "^5.3.0",
+    "postcss-loader": "^7.3.4",
+    "pug": "^3.0.2",
     "request": "^2.88.2",
-    "request-ip": "^2.1.3",
-    "sass-loader": "^12.1.0",
-    "selenium-webdriver": "^4.0.0-beta.4",
-    "url": "^0.11.0",
-    "webpack": "^5.44.0",
-    "webpack-cli": "^4.7.2"
+    "request-ip": "^3.3.0",
+    "sass-loader": "^13.3.3",
+    "selenium-webdriver": "^4.16.0",
+    "url": "^0.11.3"
   }
 }
