database 설정정보 변경.

--- a/src/.env
+++ b/src/.env
@@ -15,8 +15,8 @@ RE_issuer=kim-es
 RE_algorithm=HS256
 
 #mysql Conection Info
-MYSQL_HOST=210.114.22.228
+MYSQL_HOST=211.37.173.176
 MYSQL_PORT=3306
-MYSQL_USER=root
-MYSQL_PWD=Tkfkd8606!
-MYSQL_DB=study_db
+MYSQL_USER=ihd8606
+MYSQL_PWD=tkfkd8606!
+MYSQL_DB=PORTFOLIO
