--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./src/www/server"
+    "start": "node ./src/app.js"
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
@@ -30,6 +30,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
+    "mysql2": "^3.7.0",
     "node-cron": "^3.0.3",
     "node-sass": "^9.0.0",
     "nodemon": "^3.0.2",
